# agent-Proteus

./: .gitignore  HARNESS.md  LICENSE  README.md  SKILL.md  pyproject.toml
agent_proteus/: __init__.py  __main__.py  cli.py  jsonio.py  layout_audit.py  mcp_server.py  orchestrator.py  process.py
agent_proteus/backends/: __init__.py  desktopctl.py  proteus_bridge.py  ui_automata.py
docs/: hermes-config.yaml  workflow.md
tests/: TEST.md  test_cli.py
