[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-Proteus"
version = "0.1.0"
description = "Agent-friendly MCP and CLI adapters for Proteus automation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "xhhh" }]
keywords = ["proteus", "mcp", "hermes-agent", "desktop-automation", "ui-automata", "desktopctl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
agent-proteus = "agent_proteus.cli:main"

[tool.setuptools.packages.find]
include = ["agent_proteus*"]
